assets/sass/fractal6.scss
/*
 *
 * Bulma Fixes
 *
 */

#body {
    // FIX the fix-top-navbar padding (for the #mainPane}
    padding-top: calc(#{$navbar-height} - 0.5rem ) !important; // why - 0.5 ? mystery

    // For discrete footer.
    min-height: calc(100vh - #{$navbar-height}) !important;

    @include desktop {
        // Orga Menu adjustments
        @include until($fullhd) {
            &.has-orga-menu {
                margin-left: 40px;

                .kb-board {
                    margin-left: calc(#{$orga-menu-width} - 40px) !important;
                }
            }
        }

        // Tree Menu adjustments
        &.has-tree-menu {
            margin-left: $tree-menu-width !important;
        }
        &.has-tree-menu.has-orga-menu {
            margin-left: calc(#{$tree-menu-width} + #{$orga-menu-width}) !important;
        }
        #helperBar.has-tree-menu,
        #mainPane.has-tree-menu > *:not(.kb-board) {
            padding-left: 2%;
        }
        #helperBar.has-tree-menu,
        #mainPane.has-tree-menu > .columns {
            justify-content: normal;
            &:not(#overview):not(.kb-board) > .column:first-child {
                width: 95%;
            }
            &#overview > .column {
                width: 47.5%;
                &:first-child {
                    padding-left:0;
                }
            }
        }
        &.has-orga-menu #tree-menu {
            margin-left: $orga-menu-width !important;
        }
    }

    // KB board adjustmenty with menus
    @include fullhd {
        &.has-orga-menu:not(.has-tree-menu) .kb-board {
            margin-left: $orga-menu-width !important;
        }
    }
}

// Modal
html.has-modal-active, html.has-modal-active2 {
    overflow: hidden !important;
    padding-right: 14px; /* Avoid width reflow */

    .tabs:not(.modal .tabs), .table-container {
        overflow: hidden;
    }
    .modal .tabs {
        overflow-x: auto;
    }
}
#navbarTop.has-modal-active, #navbarTop.has-modal-active2 {
    .navbar {
        padding-right: 14px; /* Avoid width reflow */
    }
}

.dropdown-content {
      .dropdown-item:hover {
          background-color: var(--dropdown-item-hover-background-color) !important;
      }
      a.dropdown-item:hover {
          color: var(--link);
      }
}

.navbar-divider {
    background-color: var(--border-color);
}
.dropdown-divider {
    background-color: var(--border-color);
    margin: 0.1rem 0;
}

hr {
    height: 1px !important;
    &.is-2 {
        height: 2px !important
    }
    &.is-3 {
        height: 4px !important
    }
}

.column {
    /*  Fix/scrollable column */
    &.is-fullheight {
        min-height: calc(100vh - #{$navbar-height} + #{$size-small});
        max-height: calc(100vh - #{$navbar-height} + #{$size-small});
        height:     calc(100vh - #{$navbar-height} + #{$size-small});
        //display: flex;
        //flex-direction: row;
        //justify-content: stretch;
        overflow-y: auto;
    }

    /* add a margin-top only when item are wrapped */
    &.flex-gap {
        display: inline-flex;
        flex-wrap: wrap;
        gap: 8px;
    }
}

.clearfix {
    display: flow-root;
}

.mx-mobile {
    @include touch {
        margin-left: 25px !important;
        margin-right: 25px !important;
    }
}

.form {
    .field-label {
        flex-grow: 1;
    }
}

.input,
.textarea {
    transition: all 100ms ease;
    &:focus {
        border-color: var(--input-focus-border-color) !important;
        background-color: var(--input-focus-background-color) !important;
        box-shadow: rgba(40, 87, 164, 0.25) 0px 0px 0px 2px;

        &:hover {
            border-color: var(--input-focus-border-color) !important;
            background-color: var(--input-focus-background-color) !important;
        }
    }
    &::placeholder {
        color: var(--input-placeholder-color) !important;
    }
}
.input:not([type="search"]),
.textarea {
    border-color: var(--border-color-light);
    &:hover {
        border-color: var(--border-color-light);
    }
    &.is-disabled, &[disabled] {
        color: var(--text-light2);
        -webkit-text-fill-color: var(--text-light2); // chrome f*ck !
        background-color: var(--input-disabled-background-color) !important;
    }
}
.input[type="search"] {
    border-color: var(--border-color);
    &:hover {
        border-color: var(--border-color);
    }
}

.panel-heading {
    font-weight: var(--weight-bold);
}

.panel-tabs {
    a {
        &.is-active {
            border-bottom-color: var(--link-active);
        }
    }
}

.help-label {
  color: var(--grey) !important;
  //display: block !important;
  font-size: $size-small !important;
  margin-top: 0.25rem !important;
}
.help {
  color: var(--grey-light) !important;
}

.is-link2 {
    color: var(--white) !important;
    background-color: var(--link2) !important;
    &.is-light {
        color: var(--link2) !important;
        background-color: initial !important;
    }
}
a.is-link {
    color: var(--link2) !important;
}
.is-grey {
    color: var(--grey) !important;
}
.is-grey-light {
    color: var(--grey-light2) !important;
}
.is-discrete {
    color: var(--is-discrete) !important;
}
.is-discrete-2 {
    color: var(--is-highlight) !important;
    font-weight: 600;
    &:hover {
        color: var(--link2) !important;
    }
}
.is-highlight {
    color: var(--is-highlight) !important;
}
.is-highlight-3 {
    color: var(--is-highlight3) !important;
}
.has-text-turquoise {
    color: var(--turquoise) !important;
}
.has-links-discrete {
    a {
        color: var(--link-discrete);
    }
}
.is-name{
    color: var(--text-strong);
}
.is-username {
    color: var(--text-light2);
    font-size: $size-7;
}
.has-background-evidence {
    background-color: var(--background-evidence) !important;
}
.has-background-border {
    background-color: var(--border-color) !important;
}
.has-background-border-light {
    background-color: var(--border-color-light) !important;
}
/* ... */

